@@ -39,9 +39,6 @@ class Mbuf: public std::streambuf
         explicit Mbuf(std::string const &name, size_t maxCount = UINT_MAX, 
                      std::string const &tag = "", bool throwing = false);
 
-        virtual ~Mbuf() = default;
-
-
         void reset(Mbuf const &mbuf);               // 1: initialize from 
                                                         // mbuf. Shares 
                                                         // d_ofstr and uses
